# arcwright

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  eslint.config.mjs  make.cmd  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml
.claude/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
api/: main.py  pyproject.toml
api/auth/: __init__.py
api/routers/: characters.py  costs.py  events.py  knowledge.py  lobby.py  mini_games.py  sessions.py
api/schemas/: __init__.py
api/tests/: test_auth.py  test_batch_harness.py  test_characters_api.py  test_costs_api.py  test_knowledge_api.py  test_mini_games_api.py  test_sessions_api.py
config/: arc_registry.json  arcs.json  case_resolution_registry.json  routing_table.json
dashboard/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
docs/: 00-How-This-Workspace-Works 354b7de354a8811eac22d969049183d9.md  00-Project-Operating-Instructions-v1 1 354b7de354a881f08655e0412aa5c9ab.md  02-Decisions-Log 03d3b381bfe34918b6100a73897893da.csv  02-Decisions-Log-Additions-May2026.md  03-Open-Questions-Log 7f57c928827f482aa62a258bed894ce6.csv  03-Open-Questions-Log 7f57c928827f482aa62a258bed894ce6_all.csv  04-Naming-and-Brand-v1 2 356b7de354a88132aa7bdf4907fd4f25.md  05-Competitive-Landscape-v1 356b7de354a881bcbf30ceee29d0a135.md  12-Build-Roadmap-v1.1.md  (+99 more)
docs-bundles/: bundle-A-product-strategy.md  bundle-B-architecture-specs.md  bundle-C-narrative.md  custom-task-brief.md  live-code-state.md
engine/: arc_state.py  pyproject.toml
engine/arc/: __init__.py  arc_state.py  models.py  pacing.py  registry.py
engine/case/: README.md  __init__.py  errors.py  invariants.py  loader.py  models.py  resolver.py  solver.py
engine/characters/: __init__.py  context.py  dialogue.py  initiative.py  pressure.py  service.py
engine/claims/: errors.py  events.py  evidence.py  matcher.py  models.py  resolver.py
engine/db/: __init__.py  orm.py  session.py  testing.py
engine/events/: __init__.py  bus.py  fanout.py  models.py
engine/harness/: __init__.py  batch.py  models.py  replay.py  runner.py  scenario.py
engine/interactions/: README.md  __init__.py  director.py  errors.py  events.py  menu.py  models.py  runtime.py
engine/knowledge/: __init__.py  graph.py  service.py
engine/mini_games/: __init__.py  loader.py  models.py  resolver.py  runtime.py
engine/mini_games/plugins/: __init__.py  _evidence_locker_breach.py  _match_3_clue_race.py  _social_truth_bluff.py
engine/narrator/: __init__.py  bridge.py
engine/resources/: demo.py  errors.py  events.py  models.py  resolver.py  runtime.py
engine/routing/: __init__.py  logging.py  router.py
engine/safety/: __init__.py  l1.py  l2.py  l3.py
engine/scoring/: calculator.py  errors.py  events.py  models.py  resolver.py  superlatives.py
engine/session/: __init__.py  models.py  obligations.py  service.py  snapshots.py
engine/telemetry/: beats.py  claims.py  costs.py  knowledge.py  obligations.py  pacing.py  resources.py  scoring.py  session.py
engine/tests/: test_arc_models.py  test_arc_registry.py  test_arc_state.py  test_authorial_intent.py  test_aw256_beat_hardcode.py  test_case_invariants.py  test_case_loader.py  test_case_models.py  test_case_property_sweep.py  test_case_resolver.py  test_case_skeleton_content.py  test_case_solver.py  test_character_dialogue.py  test_character_generation_context.py  test_character_service.py  test_claims_events.py  test_claims_evidence.py  test_claims_integration.py  test_claims_matcher.py  test_claims_models.py  test_claims_naming_contract.py  test_claims_resolver.py  test_claims_schema.py  test_cost_summary.py  test_couch_race_arc_json.py  test_couch_race_harness.py  test_events.py  test_generation_logging.py  test_harness_batch.py  test_harness_runner.py  test_harness_scenarios.py  test_initiative.py  test_interaction_topic.py  test_interactions_director.py  test_interactions_events.py  test_interactions_integration.py  test_interactions_menu.py  test_interactions_models.py  test_interactions_runtime.py  test_killer_tell_tiers.py  (+38 more)
(+702 files in other folders)
