[build-system]
requires = ["setuptools==75.6.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "arcwright-workspace"
version = "0.1.0"
description = "Workspace tooling and dependency manifest for Arcwright."
requires-python = ">=3.11"

[project.optional-dependencies]
engine = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "httpx==0.28.1",
    "litellm==1.52.15",
    "pgvector==0.3.6",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "python-statemachine==3.0.1",
    "sqlalchemy[asyncio]==2.0.36",
    "structlog==24.4.0",
]
api = [
    "fastapi==0.115.6",
    "firebase-admin==6.6.0",
    "uvicorn[standard]==0.32.1",
]
dev = [
    "mypy==1.13.0",
    "pytest==8.3.4",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [
    "__pycache__",
    ".pytest_cache",
    "engine/routing/router.py",
    "engine/session/__init__.py",
    "engine/tests",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = [
    "^engine/tests/",
    "^evals/",
]
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["alembic", "alembic.*", "litellm", "statemachine"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["engine.routing.router"]
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = ["engine.arc.arc_state"]
disable_error_code = ["call-arg"]
