[build-system]
requires = ["setuptools==75.6.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "arcwright-dev"
version = "0.1.0"
description = "Shared developer tooling configuration for the Arcwright monorepo."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "mypy==1.13.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.23.8",
    "aiosqlite==0.20.0",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests", "engine/tests", "api/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [
    "__pycache__",
    ".pytest_cache",
    "engine/routing/router.py",
    "engine/session/__init__.py",
    "engine/tests",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = [
    "^engine/tests/",
    "^evals/",
]
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["alembic", "alembic.*", "litellm", "statemachine"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pgvector", "pgvector.*", "sqlalchemy", "sqlalchemy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["firebase_admin", "firebase_admin.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["engine.routing.router"]
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = ["engine.arc.arc_state"]
disable_error_code = ["call-arg"]
