[build-system]
requires = ["setuptools==75.6.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "arcwright-engine"
version = "0.1.0"
description = "Arcwright engine library."
requires-python = ">=3.11"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "httpx==0.28.1",
    "litellm==1.52.15",
    "pgvector==0.3.6",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "python-statemachine==3.0.1",
    "sqlalchemy[asyncio]==2.0.36",
    "structlog==24.4.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [".."]
include = ["engine*"]
